# dracula

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  flake.nix
examples/: housing.csv
src/: CMakeLists.txt
src/linear_regression/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
src/logistic_regression/: CMakeLists.txt  main.cpp
