# find_package(rapidcsv REQUIRED)
# find_package(OpenXLSX REQUIRED)
find_package(imgui REQUIRED)
find_package(glfw3)
# find_package(glew)
find_package(implot)
find_package(OpenGL)

set(SUBPROJECT_NAME "linear_regression")
add_executable(${SUBPROJECT_NAME} ./main.cpp ./renderer.cpp)
target_include_directories(${SUBPROJECT_NAME} PRIVATE .)
target_compile_definitions(${SUBPROJECT_NAME} PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLEW)
# target_link_libraries(${SUBPROJECT_NAME} OpenGL::GL rapidcsv::rapidcsv OpenXLSX::OpenXLSX implot::implot imgui::imgui GLEW::GLEW glfw  "-framework Cocoa" "-framework IOKit" "-framework CoreFoundation")
target_link_libraries(${SUBPROJECT_NAME} OpenGL::GL imgui implot glfw  "-framework Cocoa" "-framework IOKit" "-framework CoreFoundation")
